--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -158,8 +158,8 @@ target_link_libraries(add_two_ints_server ${catkin_LIBRARIES})
 add_executable(add_two_ints_client src/add_two_ints_client.cpp)
 target_link_libraries(add_two_ints_client ${catkin_LIBRARIES})
 
-add_executable(gazebo_change_start src/gazebo_change_start.cpp)
-target_link_libraries(add_two_ints_server ${catkin_LIBRARIES})
+add_executable(gazeboChangeStart src/gazeboChangeStart.cpp)
+target_link_libraries(gazeboChangeStart ${catkin_LIBRARIES})
 
 #############
 ## Install ##
